--- a/css/style-nosotros.css
+++ b/css/style-nosotros.css
@@ -16,6 +16,7 @@
     margin-top: 2rem;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    gap: 2rem;
 }
 /* Responsive */
 @media screen and (max-width:1000px){
@@ -34,7 +35,6 @@
         column-gap: 2rem;
     }
 }
-.ca
 .card {
     position: relative;
     width: 30rem;
@@ -53,6 +53,8 @@
   
   .card img {
     transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    object-fit: cover;
+    height: 100%;
   }
   
   .card:hover {
